--- a/WPF_Game/WPF_Game/MainWindow.xaml
+++ b/WPF_Game/WPF_Game/MainWindow.xaml
@@ -5,8 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Wpf_Game"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Asteroidy" Height="400"  Width="800"
+        WindowStartupLocation="CenterOwner">
     <Grid>
+        <Button Content="Run" HorizontalAlignment="Left" Margin="30,36,0,0" VerticalAlignment="Top" Click="Button_Click"/>
+        <Canvas Width="431" x:Name="Playground" Height="212"/>
+
+
 
     </Grid>
 </Window>
